tests/ui_unstable/invalid_type_include_wch.stderr
error: expected one of: `u16`, `u32`, `i16`, `i32`
 --> $DIR/invalid_type_include_wch.rs:3:30
  |
3 | const INVALID_TYPE: &[f32] = include_wch!(f32, "../data/basic.txt");
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `include_wch` (in Nightly builds, run with -Z macro-backtrace for more info)
