tests/ui_unstable/invalid_type_include_wch.rs
use wchar::include_wch;

const INVALID_TYPE: &[f32] = include_wch!(f32, "../data/basic.txt");

fn main() {}
